--- a/package.json
+++ b/package.json
@@ -2,12 +2,23 @@
   "name": "vanilla",
   "version": "0.0.0",
   "scripts": {
+    "start": "vite",
+    "predeploy": "npm run build",
+    "deploy": "netlify deploy --prod --dir=dist",
     "dev": "vite",
     "build": "tsc && vite build",
     "serve": "vite preview"
   },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "semi": false,
+    "singleQuote": true,
+    "useTabs": false
+  },
   "devDependencies": {
-    "typescript": "^4.3.2",
-    "vite": "^2.4.4"
+    "typescript": "^4.3.5",
+    "vite": "^2.5.0",
+    "vite-plugin-checker": "^0.3.4"
   }
 }
